Lab 2/20301194/y.output
Terminals which are not used

   DO
   SWITCH
   DEFAULT
   GOTO
   BREAK
   CHAR
   DOUBLE
   CASE
   CONTINUE
   PRINTF
   COLON


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 variable: ID
   36         | ID LTHIRD expression RTHIRD

   37 expression: logic_expression
   38           | variable ASSIGNOP logic_expression

   39 logic_expression: rel_expression
   40                 | rel_expression LOGICOP rel_expression

   41 rel_expression: simple_expression
   42               | simple_expression RELOP simple_expression

   43 simple_expression: term
   44                  | simple_expression ADDOP term

   45 term: unary_expression
   46     | term MULOP unary_expression

   47 unary_expression: ADDOP unary_expression
   48                 | NOT unary_expression
   49                 | factor

   50 factor: variable
   51       | ID LPAREN argument_list RPAREN
   52       | LPAREN expression RPAREN
   53       | CONST_INT
   54       | CONST_FLOAT
   55       | variable INCOP
   56       | variable DECOP

   57 argument_list: arguments
   58              | /* empty */

   59 arguments: arguments COMMA logic_expression
   60          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 28 29
ELSE (259) 29
FOR (260) 27
DO (261)
INT (262) 15
FLOAT (263) 16
VOID (264) 17
ID (265) 6 7 8 10 18 19 20 21 31 35 36 51
SWITCH (266)
DEFAULT (267)
GOTO (268)
WHILE (269) 30
BREAK (270)
CHAR (271)
DOUBLE (272)
RETURN (273) 32
CASE (274)
CONTINUE (275)
PRINTF (276)
CONST_INT (277) 19 21 53
CONST_FLOAT (278) 54
INCOP (279) 55
PRINTLN (280) 31
DECOP (281) 56
MULOP (282) 46
ADDOP (283) 44 47
RELOP (284) 42
ASSIGNOP (285) 38
LOGICOP (286) 40
NOT (287) 48
LPAREN (288) 6 7 27 28 29 30 31 51 52
RPAREN (289) 6 7 27 28 29 30 31 51 52
LCURL (290) 12 13
RCURL (291) 12 13
LTHIRD (292) 19 21 36
RTHIRD (293) 19 21 36
COMMA (294) 8 9 18 19 59
COLON (295)
SEMICOLON (296) 14 31 32 33 34
LOWER_THAN_ELSE (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
start (44)
    on left: 1, on right: 0
program (45)
    on left: 2 3, on right: 1 2
unit (46)
    on left: 4 5, on right: 2 3
func_definition (47)
    on left: 6 7, on right: 5
parameter_list (48)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (49)
    on left: 12 13, on right: 6 7 26
var_declaration (50)
    on left: 14, on right: 4 24
type_specifier (51)
    on left: 15 16 17, on right: 6 7 8 9 10 11 14
declaration_list (52)
    on left: 18 19 20 21, on right: 14 18 19
statements (53)
    on left: 22 23, on right: 12 23
statement (54)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 27 28 29 30
expression_statement (55)
    on left: 33 34, on right: 25 27
variable (56)
    on left: 35 36, on right: 38 50 55 56
expression (57)
    on left: 37 38, on right: 27 28 29 30 32 34 36 52
logic_expression (58)
    on left: 39 40, on right: 37 38 59 60
rel_expression (59)
    on left: 41 42, on right: 39 40
simple_expression (60)
    on left: 43 44, on right: 41 42 44
term (61)
    on left: 45 46, on right: 43 44 46
unary_expression (62)
    on left: 47 48 49, on right: 45 46 47 48
factor (63)
    on left: 50 51 52 53 54 55 56, on right: 49
argument_list (64)
    on left: 57 58, on right: 51
arguments (65)
    on left: 59 60, on right: 57 59


state 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


state 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


state 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


state 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


state 4

    0 $accept: start . $end

    $end  shift, and go to state 10


state 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


state 6

    3 program: unit .

    $default  reduce using rule 3 (program)


state 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


state 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


state 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


state 10

    0 $accept: start $end .

    $default  accept


state 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


state 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


state 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   18 declaration_list: declaration_list . COMMA ID
   19                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


state 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


state 15

   21 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


state 16

   18 declaration_list: declaration_list COMMA . ID
   19                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


state 17

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


state 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


state 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


state 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


state 21

   21 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


state 22

   18 declaration_list: declaration_list COMMA ID .
   19                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


state 23

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 41
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statements            go to state 46
    statement             go to state 47
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


state 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


state 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


state 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


state 28

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


state 29

   19 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


state 30

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


state 31

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


state 32

   35 variable: ID .
   36         | ID . LTHIRD expression RTHIRD
   51 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 62
    LTHIRD  shift, and go to state 63

    $default  reduce using rule 35 (variable)


state 33

   30 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


state 34

   32 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 49
    expression         go to state 65
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 35

   53 factor: CONST_INT .

    $default  reduce using rule 53 (factor)


state 36

   54 factor: CONST_FLOAT .

    $default  reduce using rule 54 (factor)


state 37

   31 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 66


state 38

   47 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable          go to state 67
    unary_expression  go to state 68
    factor            go to state 56


state 39

   48 unary_expression: NOT . unary_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable          go to state 67
    unary_expression  go to state 69
    factor            go to state 56


state 40

   52 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 49
    expression         go to state 70
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 41

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


state 42

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


state 43

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


state 44

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


state 45

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


state 46

   12 compound_statement: LCURL statements . RCURL
   23 statements: statements . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 73
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 47

   22 statements: statement .

    $default  reduce using rule 22 (statements)


state 48

   25 statement: expression_statement .

    $default  reduce using rule 25 (statement)


state 49

   38 expression: variable . ASSIGNOP logic_expression
   50 factor: variable .
   55       | variable . INCOP
   56       | variable . DECOP

    INCOP     shift, and go to state 74
    DECOP     shift, and go to state 75
    ASSIGNOP  shift, and go to state 76

    $default  reduce using rule 50 (factor)


state 50

   34 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 77


state 51

   37 expression: logic_expression .

    $default  reduce using rule 37 (expression)


state 52

   39 logic_expression: rel_expression .
   40                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 78

    $default  reduce using rule 39 (logic_expression)


state 53

   41 rel_expression: simple_expression .
   42               | simple_expression . RELOP simple_expression
   44 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 79
    RELOP  shift, and go to state 80

    $default  reduce using rule 41 (rel_expression)


state 54

   43 simple_expression: term .
   46 term: term . MULOP unary_expression

    MULOP  shift, and go to state 81

    $default  reduce using rule 43 (simple_expression)


state 55

   45 term: unary_expression .

    $default  reduce using rule 45 (term)


state 56

   49 unary_expression: factor .

    $default  reduce using rule 49 (unary_expression)


state 57

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


state 58

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 82

    $default  reduce using rule 9 (parameter_list)


state 59

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 83


state 60

   28 statement: IF LPAREN . expression RPAREN statement
   29          | IF LPAREN . expression RPAREN statement ELSE statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 49
    expression         go to state 84
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 61

   27 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    SEMICOLON    shift, and go to state 42

    expression_statement  go to state 85
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 62

   51 factor: ID LPAREN . argument_list RPAREN

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    $default  reduce using rule 58 (argument_list)

    variable           go to state 67
    logic_expression   go to state 86
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56
    argument_list      go to state 87
    arguments          go to state 88


state 63

   36 variable: ID LTHIRD . expression RTHIRD

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 49
    expression         go to state 89
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 64

   30 statement: WHILE LPAREN . expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 49
    expression         go to state 90
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 65

   32 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 91


state 66

   31 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 92


state 67

   50 factor: variable .
   55       | variable . INCOP
   56       | variable . DECOP

    INCOP  shift, and go to state 74
    DECOP  shift, and go to state 75

    $default  reduce using rule 50 (factor)


state 68

   47 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 47 (unary_expression)


state 69

   48 unary_expression: NOT unary_expression .

    $default  reduce using rule 48 (unary_expression)


state 70

   52 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 93


state 71

   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


state 72

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


state 73

   23 statements: statements statement .

    $default  reduce using rule 23 (statements)


state 74

   55 factor: variable INCOP .

    $default  reduce using rule 55 (factor)


state 75

   56 factor: variable DECOP .

    $default  reduce using rule 56 (factor)


state 76

   38 expression: variable ASSIGNOP . logic_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 67
    logic_expression   go to state 94
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 77

   34 expression_statement: expression SEMICOLON .

    $default  reduce using rule 34 (expression_statement)


state 78

   40 logic_expression: rel_expression LOGICOP . rel_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 67
    rel_expression     go to state 95
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 79

   44 simple_expression: simple_expression ADDOP . term

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable          go to state 67
    term              go to state 96
    unary_expression  go to state 55
    factor            go to state 56


state 80

   42 rel_expression: simple_expression RELOP . simple_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 67
    simple_expression  go to state 97
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 81

   46 term: term MULOP . unary_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable          go to state 67
    unary_expression  go to state 98
    factor            go to state 56


state 82

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)


state 83

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 19 (declaration_list)


state 84

   28 statement: IF LPAREN expression . RPAREN statement
   29          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


state 85

   27 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    SEMICOLON    shift, and go to state 42

    expression_statement  go to state 100
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 86

   60 arguments: logic_expression .

    $default  reduce using rule 60 (arguments)


state 87

   51 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 101


state 88

   57 argument_list: arguments .
   59 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 102

    $default  reduce using rule 57 (argument_list)


state 89

   36 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 103


state 90

   30 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 104


state 91

   32 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 32 (statement)


state 92

   31 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 105


state 93

   52 factor: LPAREN expression RPAREN .

    $default  reduce using rule 52 (factor)


state 94

   38 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 38 (expression)


state 95

   40 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 40 (logic_expression)


state 96

   44 simple_expression: simple_expression ADDOP term .
   46 term: term . MULOP unary_expression

    MULOP  shift, and go to state 81

    $default  reduce using rule 44 (simple_expression)


state 97

   42 rel_expression: simple_expression RELOP simple_expression .
   44 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 79

    $default  reduce using rule 42 (rel_expression)


state 98

   46 term: term MULOP unary_expression .

    $default  reduce using rule 46 (term)


state 99

   28 statement: IF LPAREN expression RPAREN . statement
   29          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 106
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 100

   27 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 49
    expression         go to state 107
    logic_expression   go to state 51
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 101

   51 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 51 (factor)


state 102

   59 arguments: arguments COMMA . logic_expression

    ID           shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    variable           go to state 67
    logic_expression   go to state 108
    rel_expression     go to state 52
    simple_expression  go to state 53
    term               go to state 54
    unary_expression   go to state 55
    factor             go to state 56


state 103

   36 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 36 (variable)


state 104

   30 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 109
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 105

   31 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 110


state 106

   28 statement: IF LPAREN expression RPAREN statement .
   29          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 111

    $default  reduce using rule 28 (statement)


state 107

   27 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 112


state 108

   59 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 59 (arguments)


state 109

   30 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 30 (statement)


state 110

   31 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 31 (statement)


state 111

   29 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 113
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 112

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 32
    WHILE        shift, and go to state 33
    RETURN       shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    PRINTLN      shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 114
    expression_statement  go to state 48
    variable              go to state 49
    expression            go to state 50
    logic_expression      go to state 51
    rel_expression        go to state 52
    simple_expression     go to state 53
    term                  go to state 54
    unary_expression      go to state 55
    factor                go to state 56


state 113

   29 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 29 (statement)


state 114

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 27 (statement)
